add exclude params for slice and sliver state
